--- a/Tangram/style.css
+++ b/Tangram/style.css
@@ -1,21 +1,17 @@
 /* Google Fonts */
-@font-face {
-    font-family: 'CustomFont';
-    src: url('Poppins-Regular.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 :root{
     --primary:#f9d806;
     --secondary:#130F40;
     --tertiary:#ffee80;
-    --cuaternary:#666666;
-    --background: #ffffff;
+    --cuaternary:#666;
     --border:.1rem solid rgba(0,0,0,.1);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
 }
 
 *{
-    font-family: 'CustomFont', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0; padding: 0;
     box-sizing: border-box;
     outline: none; border: none;
@@ -223,15 +219,6 @@ section{
 
 
 
-
-
-
-
-
-
-
-
-
 .home{
     padding-top: 10rem;
     text-align: center;
@@ -251,7 +238,6 @@ section{
 
 
 
-/* Figuras */
 .tangram {
     display: block;
     margin-left: auto;
@@ -262,7 +248,7 @@ section{
 }
 
 .tangramstriangulo1 {
-    background-color: var(--primary);
+    color: var(--primary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -272,7 +258,7 @@ section{
 
 
 .tangramstriangulo2 {
-    background-color: var(--secondary);
+    color: var(--secondary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -282,7 +268,7 @@ section{
 
 
 .tangramparalelogramo {
-    background-color: var(--cuaternary);
+    color: var(--cuaternary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -308,7 +294,7 @@ section{
 
 
 .tangrammtriangulo {
-    background-color: var(--tertiary);
+    color: var(--tertiary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -318,7 +304,7 @@ section{
 
 
 .tangrambtriangulo1 {
-    background-color: var(--primary);
+    color: var(--primary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -328,7 +314,7 @@ section{
 
 
 .tangrambtriangulo2 {
-    background-color: var(--secondary);
+    color: var(--secondary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -337,7 +323,7 @@ section{
 }
 
 .tangramcuadrado {
-    background-color: var(--tertiary);
+    color: var(--tertiary);
     width: 50px;
     height: 50px;
     position: relative;
@@ -346,7 +332,7 @@ section{
 }
 
 
-/* Fin de las figuras */
+
 
 
 
